# protsearch

./: .env  .gitignore  .vercelignore  LICENSE  README.md  config.yaml  environment.yml  pyproject.toml  requirements.txt  vercel.json
backend/: .gitignore  Dockerfile  app.py  proteinatlas_search.tsv  pyproject.toml  requirements.txt
backend/api/: pyproject.toml
backend/api/src/: config.yaml  index.py  indexsave.py  proteinatlas_search.tsv
backend/api/src/services/: chunking.py  confighelper.py  genealias.py  llmhelper.py  pubmedhelper.py  summarizationwrapper.py  uniprothelper.py
backend/src/: __init__.py  main.py
backend/src/results/: ACE_20250722_172733.txt  ACE_20250722_173524.txt  ACE_20250803_235409.txt  ACE_20250804_003140.txt  ACE_NPTX1_20250728_110048.txt  APP_20250804_003247.txt  NPTX1_20250803_235446.txt  NPTX1_20250804_003214.txt
protsearch/: .gitignore  README.md  core.py  next.config.js  package-lock.json  package.json  tsconfig.json
protsearch/src/app/: layout.tsx  page.tsx
protsearch/src/app/results/: page.tsx
protsearch/tests/: test_core.py
results/: NPTX2_summary_2025-06-13.txt
src/: main.py
tests/: __init__.py  test_main.py
